清理模板垃圾不用文件

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- 激活chrome frame内核插件 -->  
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <title>智慧大院后台管理系统</title>
+    <title>翔天世纪集团官网管理系统</title>
     <!-- <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_674196_89pa9pmfyd0cz0k9.css"> -->
   </head>
   <body>
